# task-tracker

./: .env  LICENSE-MIT  README.md  docker-compose.yaml
backend/: .pre-commit-config.yaml  Cargo.toml  Dockerfile  flake.nix  rust-toolchain-slim.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
backend/.cargo/: audit.toml
backend/src/: main.rs
frontend/: Dockerfile  flake.nix  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.js  tasks.js
frontend/src/components/: Filters.jsx  TaskForm.jsx  TaskItem.jsx  TaskList.jsx
frontend/src/context/: AuthContext.jsx  TaskContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: AuthPage.jsx  Dashboard.jsx
