# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "task-tracker-backend"
version = "0.1.0"
# authors = []
edition = "2024"
# description = ""
readme = "README.md"
repository = "https://github.com/AntoninHorkel/task-tracker"
license = "MIT OR Apache-2.0"
# keywords = []
# categories = [] # https://crates.io/category_slugs
exclude = ["target/", "result/"]

[profile.dev]
opt-level = 0
debug = true
# split-debuginfo
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
# codegen-units
rpath = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true
codegen-units = 1
rpath = true

# TODO
# [build]
# rustflags = ["-C", "target-cpu=native"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bb8 = "0.9"
bcrypt = "0.17"
chrono = "0.4"
futures = "0.3"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
redis = { version = "1.0", default-features = false, features = [
  "tokio-comp",
  "bb8",
  # "connection-manager",
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.19", features = ["serde", "v4"] }

# https://doc.rust-lang.org/rustc/lints/listing/index.html
# TODO: More lints
[lints.rust]
deprecated-safe = "deny"
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unsafe_code = "warn"
# unused = "warn"
warnings = "warn"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[lints.clippy]
# TODO: Add all common metadata
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "warn"                # expect
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "warn"               # expect
cast_possible_wrap = "warn"                     # expect
cast_precision_loss = "warn"                    # expect
cast_sign_loss = "warn"                         # expect
match_wildcard_for_single_variants = "allow"
similar-names = "warn"                          # expect
struct-excessive-bools = "warn"                 # expect
too_many_lines = "warn"
perf = { level = "deny", priority = -1 }
# TODO: Add more restrictions
restriction = { level = "allow", priority = -1 }
absolute_paths = "warn"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "warn"
style = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
